# lab-4-FrolAl120

./: CMakeLists.txt  README.md  cpp.hint
.github/workflows/: ci.yml
src/body_cli/: CMakeLists.txt
src/body_cli/src/: main.cpp
src/body_core/: CMakeLists.txt
src/body_core/include/lab3/body/: body.hpp
src/resource_core/: CMakeLists.txt  handle.cpp  handle.hpp  resource_error.cpp  resource_error.hpp  resource_manager.cpp  resource_manager.hpp
tests/: tests.cpp
